--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Create release
 # On push to master branch. i.e. when we merge a PR.
 on:
   push:
-    branches: [ master, VFL/WI00764279/NCN-Diagrams-Move-WTG.Blazor.Diagrams-to-nuget.org ]
+    branches: [ master ]
     tags:
       - "v*"
   workflow_dispatch:
@@ -59,13 +59,13 @@ jobs:
         retention-days: 5
 
       # Create a new release and upload the package to the release
-    # - name: Release
-    #   uses: softprops/action-gh-release@v1
-    #   with:
-    #     files: ${{ env.PACKAGE_PATH }}
-    #     tag_name: ${{ steps.version.outputs.version }}
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: ${{ env.PACKAGE_PATH }}
+        tag_name: ${{ steps.version.outputs.version }}
 
-    # - name: Push NuGet Package to NuGet Gallery
-    #   run: |
-    #     nuget setapikey ${{ secrets.NUGET_API_KEY }}
-    #     nuget push ${{ env.PACKAGE_PATH }} -Source https://api.nuget.org/v3/index.json
+    - name: Push NuGet Package to NuGet Gallery
+      run: |
+        nuget setapikey ${{ secrets.NUGET_API_KEY }}
+        nuget push ${{ env.PACKAGE_PATH }} -Source https://api.nuget.org/v3/index.json
