--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,7 @@ jobs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: |
-            6.0.x
-            3.1.x
+        dotnet-version: '6.0.x'
 
       # Finds the latest release and increases the version
     - name: Get next version
