--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,7 +2,7 @@
 
   <ItemGroup>
     <PackageVersion Include="SvgPathProperties" Version="1.1.2" />
-    <PackageVersion Include="System.Net.Http.Json" Version="8.0.0" />
+    <PackageVersion Include="System.Net.Http.Json" Version="9.0.0" />
     <PackageVersion Include="GraphShape" Version="1.2.1" />
     <PackageVersion Include="MatBlazor" Version="2.10.0" />
     <PackageVersion Include="bunit" Version="1.25.3" />
@@ -34,4 +34,12 @@
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="[8,9.0.0)" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="[8,9.0.0)" />
   </ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<PackageVersion Include="Microsoft.AspNetCore.Components" Version="[9, 10.0.0)" />
+		<PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="[9, 10.0.0)" />
+		<PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="[9, 10.0.0)" />
+		<PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="[9, 10.0.0)" />
+	</ItemGroup>
+
 </Project>
