--- a/src/Blazor.Diagrams/Blazor.Diagrams.csproj
+++ b/src/Blazor.Diagrams/Blazor.Diagrams.csproj
@@ -47,7 +47,7 @@
   </Target>
 
   <Target Name="CompileStaticAssets" AfterTargets="CoreCompile;TestWebCompiler" Condition="'$(ErrorCode)' == '0'">
-    <Exec Command="webcompiler -r wwwroot" StandardOutputImportance="high" StandardErrorImportance="high" />
+    <Exec Command="webcompiler --zip disable -r wwwroot" StandardOutputImportance="high" StandardErrorImportance="high" />
   </Target>
 
 </Project>
