--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9'
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
